Settings dropdown options, cleanup unused code.