@@ -3,6 +3,7 @@ package com.drozal.dataterminal.config;
 import java.io.*;
 import java.net.URISyntaxException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Properties;
 
 public class ConfigWriter {
@@ -18,7 +19,7 @@ public class ConfigWriter {
             String jarPath = ConfigWriter.class.getProtectionDomain().getCodeSource().getLocation().toURI().getPath();
 
             // Decode the URI path to handle spaces or special characters
-            jarPath = URLDecoder.decode(jarPath, "UTF-8");
+            jarPath = URLDecoder.decode(jarPath, StandardCharsets.UTF_8);
 
             // Extract the directory path from the JAR path
             String jarDir = new File(jarPath).getParent();
